Fix overflow for history side nav

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,6 +27,7 @@ body {
       width: 100%;
       height: 90%;
       text-align: center;
+      overflow: auto;
     }
 
     .balanceSum{
